feat: add gauge

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -27,5 +27,7 @@
 
   "enterYourData": "Enter your data",
   "yourBmiResult": "Your BMI result",
-  "bmiScaleAndMetric": "BMI scale and metric"
+  "bmiScaleAndMetric": "BMI scale and metric",
+
+  "bmiScore": "BMI Score"
 }
